fix: real estate text alignment

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -7855,7 +7855,7 @@ studio-intro-slide
   margin-right: auto; */
   white-space: initial !important;
   text-align: center;
-  margin-left: -2%;
+  margin-left: -4%;
   margin-right: 2%;
   /* font-weight: 500; */
 }
